--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <h2>Check Console for Payroll Output</h2>
+  <h2>Open Console for Payroll Output</h2>
 
   <script src="cc_5.js"></script>
 </body>
